--- a/DevOps/backup_restore/settings.json
+++ b/DevOps/backup_restore/settings.json
@@ -3,6 +3,6 @@
 "username": "admin",
 "password": "admin",
 "port": 27017,
-"output_path": "/opt/OmniMongoDB/backup"
+"backup_path": "/opt/OmniMongoDB/backup"
 
 }
