feat<health_check>: check one more mongodb instance in one host

--- a/DevOps/health_check_script/config.json
+++ b/DevOps/health_check_script/config.json
@@ -1,7 +1,10 @@
 {
-    
-"username": "admin",
-"password": "admin",
-"mongod_conf": "/etc/mongod.conf"
-    
+    "hosts": [
+        {
+            "name": "rs0_0",
+            "username": "admin",
+            "password": "admin",
+            "mongod_conf": "/etc/mongod.conf"
+        }
+    ]
 }
