refactor<health_check>: get_colls_frag_ratio output json format

--- a/DevOps/health_check_analysis/config.json
+++ b/DevOps/health_check_analysis/config.json
@@ -2,5 +2,7 @@
     "name": "rs0_0",
     "username": "admin",
     "password": "admin",
-    "mongod_conf": "/etc/mongod.conf"
+    "mongod_conf": "/etc/mongod.conf",
+    "health_check_start": 1600000000,
+    "health_check_end": 1700000000
 }
