refactor<parsing>: refactor config file

--- a/DevOps/health_check_analysis/config.json
+++ b/DevOps/health_check_analysis/config.json
@@ -1,8 +1,9 @@
 {
-    "name": "rs0_0",
+    "mongodb_set": "rs0",
     "username": "admin",
     "password": "admin",
     "mongod_conf": "/etc/mongod.conf",
     "health_check_start": 1600000000,
-    "health_check_end": 1700000000
+    "health_check_end": 1700000000,
+    "company": "fubon"
 }
