refactor<parsing>: multiple hosts parsing and input

--- a/DevOps/health_check_script/config.json
+++ b/DevOps/health_check_script/config.json
@@ -1,7 +1,7 @@
 {
     "hosts": [
         {
-            "name": "rs0_0",
+            "mongod_name": "rs0_0",
             "username": "admin",
             "password": "admin",
             "mongod_conf": "/etc/mongod.conf"
