--- a/DevOps/health_check_analysis/config.json
+++ b/DevOps/health_check_analysis/config.json
@@ -2,11 +2,20 @@
     "username": "admin",
     "password": "admin",
     "mongod_conf": "/etc/mongod.conf",
-    "mongod_name": "rs0_0",
-    "mongodb_set": "rs0",
     "health_check_start": 1600000000,
     "health_check_end": 1700000000,
     "company": "fubon",
-    "hostname": "mongodb-ansible-8",
-    "date": "2021-10-14"
+    "date": "2021-10-14",
+    "hosts": [
+        {
+            "hostname":"mongodb-ansible-8",
+            "mongodb_set" : "rs0",
+            "mongod_name" : "rs0_0"
+        },
+        {
+            "hostname" : "mongodb-ansible-9",
+            "mongodb_set" : "rs0",
+            "mongod_name" : "rs0_0"
+        }
+    ]
 }
