fix: comment copy diagnostic data feat

--- a/DevOps/health_check_script/config.json
+++ b/DevOps/health_check_script/config.json
@@ -3,8 +3,8 @@
     "hosts": [
         {
             "mongod_name": "rs0_0",
-            "username": "admin",
-            "password": "admin",
+            "username": "root",
+            "password": "root",
             "mongod_conf": "/etc/mongod.conf"
         }
     ]
